improved handling of compact constructor